# contigo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bitmap.hpp  cell.hpp  color.hpp  command.hpp  drm.cpp  drm.hpp  error.hpp  fb.cpp  fb.hpp  file.hpp  framebuf.cpp  framebuf.hpp  geom.hpp  image.hpp  io.hpp  logging.hpp  main.cpp  mouse.cpp  mouse.hpp  pango.cpp  pango.hpp  pixman.cpp  pixman.hpp  posix_error.hpp  pty.cpp  pty.hpp  term.cpp  term.hpp  tty.cpp  tty.hpp  types.hpp  vte.cpp  vte.hpp  vterm.cpp  vterm.hpp
src/render/: CMakeLists.txt
src/screen/: CMakeLists.txt  fb.cpp  fb.hpp  screen.cpp  screen.hpp
src/term/: CMakeLists.txt  pty.cpp  pty.hpp  term.cpp  term.hpp  tty.cpp  tty.hpp  vte.cpp  vte.hpp
